Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'ChannelMessageMasking/main'.

Changes to be committed:
	modified:   .gitignore
	new file:   README.md
	modified:   aiservice.py
	modified:   config.ini
	new file:   masking.py
	renamed:    presidiotest.py -> presidio.py
	new file:   requirements.txt
	renamed:    run-textanalytics.py -> run-aiservice.py

--- a/config.ini
+++ b/config.ini
@@ -5,3 +5,7 @@ API_KEY =
 [CONTAINER]
 ENDPOINT_URI = http://localhost:5000
 IMAGE_TAG = latest
+
+[MODEL]
+LANG_CODE = ja
+MODEL_NAME = ja_core_news_trf
